Provide correct currency information if not converting to base currency

BUG: 469195
FIXED-IN: 5.2